Fixed extra space showing between rows

--- a/grid.css
+++ b/grid.css
@@ -41,36 +41,39 @@ main {
 }
 
 #grid-container {
+  margin-top: 12px;
   width: 100%;
   height: 91vh;
   display: grid;
   grid-template-columns: 120px 120px 120px 120px 120px 120px;
-  grid-gap: 16px;
+  grid-gap: 1rem;
   grid-template-areas:
     "one one one one two two"
     "three three three aside aside aside";
   justify-content: center;
   align-items: center;
+  grid-auto-rows: max-content max-content;
 }
 
 #one {
-  height: 250px;
+  height: 260px;
   background-color: hsl(0, 100%, 74%);
   grid-area: one;
 }
 #two {
-  height: 250px;
+  height: 260px;
   background-color: rgb(252, 173, 70);
   grid-area: two;
 }
 #three {
-  height: 250px;
+  height: 260px;
   background-color: rgb(33, 212, 63);
   grid-area: three;
 }
 .aside {
+  height: 260px;
   display: grid;
-  grid-template-rows: 100px 140px;
+  grid-template-rows: 110px 140px;
   grid-gap: 10px;
   grid-area: aside;
 }
